--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-#utf-8
-#Thu Jun 18 16:43:47 CEST 2009
-app.grails.version=1.1
+#Grails Metadata file
+#Wed Nov 17 15:50:57 CET 2010
+app.grails.version=1.3.4
 app.name=ntlm-auth
